--- a/_config.yml
+++ b/_config.yml
@@ -93,9 +93,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "custom" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-G94T7ZTW56"
+    tracking_id          : 
     anonymize_ip         : # true, false (default)
 
 
