--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "berkeley" # "default", "air", "aqua", "contrast", "d
 locale                   : "en-US"
 title                    : "Noel Foster"
 title_separator          : "-"
-subtitle                 : "PhD Candidate in Politics, Princeton University" # site tagline that appears below site title in masthead
+subtitle                 : "Postdoctoral Fellow in Technology and International Security, The UC Institute on Global Conflict and Cooperation" # site tagline that appears below site title in masthead
 name                     : "Noel Foster"
-description              : "PhD Candidate in Politics, Princeton University"
+description              : "Postdoctoral Fellow in Technology and International Security, The UC Institute on Global Conflict and Cooperation"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -103,23 +103,23 @@ analytics:
 author:
   name             : "Noel Foster"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "PhD Candidate in Politics"
-  location         : "Princeton University"
+  bio              : "Postdoctoral Fellow in Technology and International Security"
+  location         : "The UC Institute on Global Conflict and Cooperation, Washington, DC"
   email            :
   links:
-    - label: "Email"
+    - label: "nfoster@ucsd.edu"
       icon: "far fa-fw fa-envelope"
-      url: "mailto:noelf@princeton.edu"
+      url: "mailto:nfoster@ucsd.edu"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-    - label: "Twitter"
+    - label: "@noel_hypothesis"
       icon: "fab fa-fw fa-twitter"
       url: "https://twitter.com/noel_hypothesis"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-    - label: "GitHub"
+    - label: "fosternt"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/fosternt"
     - label: "Instagram"
