--- a/_config.yml
+++ b/_config.yml
@@ -147,9 +147,9 @@ footer:
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url:
+    - label: "Google Scholar"
+      icon: "fas fa-fw fa-user-graduate"
+      url: "https://scholar.google.com/citations?user=L8or78gAAAAJ"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "https://www.linkedin.com/in/noelfoster/"
