--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: "Google Scholar"
+      icon: "fas fa-fw fa-user-graduate"
+      url: "https://scholar.google.com/citations?user=L8or78gAAAAJ"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin-in"
       url: "https://www.linkedin.com/in/noelfoster/"
