--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "CV"
     url: /cv/
-  - title: "Dissertation"
-    url: /dissertation/
+  - title: "Book Project"
+    url: /bookproject/
   - title: "Research"
     url: /research/
   - title: "Teaching"
