--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "berkeley" # "default", "air", "aqua", "contrast", "d
 locale                   : "en-US"
 title                    : "Noel Foster"
 title_separator          : "-"
-subtitle                 : "Postdoctoral Fellow in Technology and International Security<br>The UC Institute on Global Conflict and Cooperation" # site tagline that appears below site title in masthead
+subtitle                 : "Assistant Professor, Joint Military Operations<br>The Naval War College" # site tagline that appears below site title in masthead
 name                     : "Noel Foster"
-description              : "Postdoctoral Fellow in Technology and International Security, The UC Institute on Global Conflict and Cooperation"
+description              : "Assistant Professor, Joint Military Operations, The Naval War College"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -103,13 +103,13 @@ analytics:
 author:
   name             : "Noel Foster"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Postdoctoral Fellow in Technology and International Security"
-  location         : "UC Institute on Global Conflict<br>and Cooperation"
+  bio              : "Assistant Professor, Joint Military Operations"
+  location         : "The Naval War College"
   email            :
   links:
-    - label: "nfoster@ucsd.edu"
+    - label: "noel.foster@usnwc.edu"
       icon: "far fa-fw fa-envelope"
-      url: "mailto:nfoster@ucsd.edu"
+      url: "mailto:noel.foster@usnwc.edu"
     - label: "@noel_hypothesis"
       icon: "fab fa-fw fa-twitter"
       url: "https://twitter.com/noel_hypothesis"
